<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Carbo App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_aliment">Enter an aliment</string>
    <string name="button_search">Search</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="action_search">Search</string>
    <string name="action_camera">Camera</string>
    <string name="action_new">New</string>
    <string name="aliment_description">Picture of the aliment</string>
    <string name="rations_in_picture">%1$d rations</string>
    <string name="aliment_not_found">%1$s not found</string>
    <string name="grams_per_ration">1 Ration of %1$s = %2$d grams</string>
    <string name="title_activity_add_aliment">AddAlimentActivity</string>
    <string name="grams_picker_initial_value">0</string>
    <string name="grams_per_ration_label">Grams per ration: </string>
    <string name="select_number">Select Number</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="rations_in_picture_label">Rations in picture: </string>
    <string name="rations_picker_initial_value">0</string>
    <string name="pick_picture">Pick a picture!</string>

    <string-array name="picture_sources">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>

    <string name="title_activity_edit_aliment">EditAlimentActivity</string>
    <string name="action_new_picture">New picture</string>

</resources>
