<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.dualnot.ignacio.carboapp.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edit_aliment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/edit_aliment"
            android:layout_weight="1" >
            <requestFocus />
        </EditText>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="searchAlimentByName"
            android:text="@string/button_search" />

    </LinearLayout>
    	
    
    <TextView
        android:id="@+id/grams_per_ration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/grams_per_ration" />
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/aliment_description"
        android:src="@drawable/no_image_320x200" />
    
     <TextView
         android:id="@+id/rations_in_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/rations_in_picture"
         android:textSize="20sp" />

</LinearLayout>
