<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dualnot.ignacio.carboapp.EditAlimentActivity$PlaceholderFragment" >

    <EditText
            android:id="@+id/edit_aliment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_aliment"
             />
    <requestFocus />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
  	    <TextView    	
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="20sp"
        	android:text="@string/grams_per_ration_label" />

        <TextView
        	android:id="@+id/grams_picker"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="20sp"
        	android:text="@string/grams_picker_initial_value"
        	 />
     </LinearLayout>
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <TextView
	        android:id="@+id/rations_in_picture"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/rations_in_picture_label" />
	    <TextView
	        android:id="@+id/rations_picker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp"
	        android:text="@string/rations_picker_initial_value" />
     </LinearLayout>
        
        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
        android:contentDescription="@string/aliment_description"
        android:src="@drawable/no_image_320x200" 
        android:onClick="choosePicture"/>
  


</RelativeLayout>
